android datepicker version

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,5 +43,7 @@
         <item name="android:textColorPrimary">@color/iron</item>
         <item name="android:background">@color/primary</item>
     </style>
+    <style name="ComponentAppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+    </style>
 
 </resources>
