--- a/app/src/main/res/layout/activity_detailed_tool.xml
+++ b/app/src/main/res/layout/activity_detailed_tool.xml
@@ -97,7 +97,26 @@
                 android:inputType="textPassword"/>
         </com.google.android.material.textfield.TextInputLayout>
 
-        <!-- Signup Button -->
+        <DatePicker
+            android:id="@+id/date_picker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"/>
+
+        <TextView
+            android:id="@+id/date_selected_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
+            android:text="Selected date:"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/update_date_button"
+            android:text="Update Selected Date TextView"/>
+
+        <!-- Reservation Button -->
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_signup"
             android:layout_width="fill_parent"
