--- a/app/src/main/res/layout/tools_content_scrolling.xml
+++ b/app/src/main/res/layout/tools_content_scrolling.xml
@@ -2,13 +2,14 @@
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@id/search_bar"
     android:layout_width="0dp"
     android:layout_height="0dp"
 
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/horizontalRecyclerView"
+    app:layout_constraintTop_toBottomOf="@id/search_barrr"
 
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ui.activity.LandingScrollingActivity"
