--- a/app/src/main/res/layout/landing_activity_main.xml
+++ b/app/src/main/res/layout/landing_activity_main.xml
@@ -18,28 +18,17 @@
     <com.google.android.material.appbar.CollapsingToolbarLayout
         android:id="@+id/toolbar_layout"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="0dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintBottom_toTopOf="@id/mid_constraint"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
 
-        <SearchView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+
     </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-<!--    <androidx.appcompat.widget.Toolbar-->
-<!--        android:id="@+id/toolbar"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="?attr/actionBarSize"-->
-
-<!--        android:background="@color/black"-->
-<!--        app:layout_collapseMode="pin"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toRightOf="parent"-->
-<!--        app:popupTheme="@style/Theme.ScrollingApp.PopupOverlay" />-->
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/horizontalRecyclerView"
@@ -47,44 +36,41 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/mid_constraint"
+        />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/mid_constraint"
         android:layout_width="421dp"
         android:layout_height="372dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@id/search_bar"
-        app:layout_constraintHorizontal_bias="0.13"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_layout">
+        app:layout_constraintTop_toBottomOf="@+id/horizontalRecyclerView">
 
         <SearchView
             android:id="@+id/search_ba2r"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="135dp"
+            android:layout_height="34dp"
+            app:layout_constraintBottom_toTopOf="@+id/include4"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar_layout" />
+            app:layout_constraintTop_toTopOf="@id/mid_constraint"
+            app:layout_constraintVertical_bias="0.0" />
 
-        <include layout="@layout/tools_content_scrolling" />
+        <include
+            android:id="@+id/include4"
+            layout="@layout/tools_content_scrolling"
+            android:layout_width="402dp"
+            android:layout_height="306dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/search_ba2r"
+            tools:layout_editor_absoluteX="9dp"
+            tools:layout_editor_absoluteY="59dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
-    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-    <!--        android:id="@+id/fab"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_margin="@dimen/fab_margin"-->
-    <!--        app:layout_anchor="@id/toolbar"-->
-    <!--        app:layout_anchorGravity="bottom|end"-->
-    <!--        app:srcCompat="@android:drawable/ic_dialog_email" />-->
-
 </androidx.constraintlayout.widget.ConstraintLayout>
