--- a/app/src/main/res/layout/tools_content_scrolling.xml
+++ b/app/src/main/res/layout/tools_content_scrolling.xml
@@ -10,7 +10,7 @@
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/search_ba2r"
+    app:layout_constraintTop_toBottomOf="@id/toolsSearchBar"
 
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ui.activity.LandingScrollingActivity"
