--- a/app/src/main/res/layout/landing_activity_main.xml
+++ b/app/src/main/res/layout/landing_activity_main.xml
@@ -7,10 +7,39 @@
     android:fitsSystemWindows="true"
     app:layout_behavior="">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/asd"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/category_toolbar"
+        >
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.363"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.1"
+            android:background="@drawable/logo" />
+
+        <!--        <TextView-->
+<!--            android:id="@+id/textView2"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="TextView"-->
+<!--         />-->
+    </androidx.constraintlayout.widget.ConstraintLayout>
     <com.google.android.material.appbar.CollapsingToolbarLayout
         android:id="@+id/category_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="90dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintBottom_toTopOf="@id/toolsMainLayoutConstraint"
         app:layout_constraintHorizontal_bias="0.0"
@@ -18,7 +47,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0">
-
 
     </com.google.android.material.appbar.CollapsingToolbarLayout>
 
@@ -28,7 +56,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/category_toolbar"
         app:layout_constraintBottom_toTopOf="@id/toolsMainLayoutConstraint"
         />
 
