--- a/app/src/main/res/layout/landing_activity_main.xml
+++ b/app/src/main/res/layout/landing_activity_main.xml
@@ -62,8 +62,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/toolsMainLayoutConstraint"
-        android:layout_width="421dp"
-        android:layout_height="372dp"
+        android:layout_width="match_parent"
+        android:layout_height="552dp"
         android:layout_marginTop="10dp"
         android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -84,13 +84,11 @@
         <include
             android:id="@+id/toolsContentScrollingInclude"
             layout="@layout/tools_content_scrolling"
-            android:layout_width="402dp"
-            android:layout_height="506dp"
+            android:layout_width="match_parent"
+            android:layout_height="606dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolsSearchBar"
-            tools:layout_editor_absoluteX="9dp"
-            tools:layout_editor_absoluteY="59dp" />
+            app:layout_constraintTop_toBottomOf="@id/toolsSearchBar" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
