--- a/app/src/main/res/layout/tool_detail_reservation.xml
+++ b/app/src/main/res/layout/tool_detail_reservation.xml
@@ -88,7 +88,7 @@
             android:gravity="center"
             android:layout_height="wrap_content"
             android:id="@+id/update_date_button"
-            android:text="Select date range for the tool rental"/>
+            android:text="Select reservation date"/>
 
         <TextView
             android:id="@+id/date_selected_text_view"
