--- a/app/src/main/res/layout/tools_list_item.xml
+++ b/app/src/main/res/layout/tools_list_item.xml
@@ -7,9 +7,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
