--- a/app/src/main/res/layout/landing_main_layout.xml
+++ b/app/src/main/res/layout/landing_main_layout.xml
@@ -19,15 +19,17 @@
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.363"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.1"
-            android:background="@drawable/logo" />
+            android:background="@drawable/logorentalo" />
 
         <!--        <TextView-->
 <!--            android:id="@+id/textView2"-->
