--- a/app/src/main/res/layout/tool_detail_reservation.xml
+++ b/app/src/main/res/layout/tool_detail_reservation.xml
@@ -79,19 +79,6 @@
             android:layout_margin="12dp"
             android:text="End date selected:"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
-
-
-        <!-- Reservation Button -->
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="395dp"
-            android:layout_height="229dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintVertical_bias="0.0">
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/reservationButton"
             android:layout_width="fill_parent"
@@ -100,7 +87,7 @@
             android:layout_marginTop="24dp"
             android:padding="12dp"
             android:enabled="false"
-            android:text="Make a reservation"/>g
+            android:text="Make a reservation"/>
 
         <TextView
             android:id="@+id/link_login"
