--- a/app/src/main/res/layout/orders_list_item.xml
+++ b/app/src/main/res/layout/orders_list_item.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:textSize="16sp"
-        android:text="order id:  "/>
+        android:text="Order id:  "/>
 
     <TextView
         android:id="@+id/orderIdTextView"
